--- a/www/actualizame.html
+++ b/www/actualizame.html
@@ -1,7 +1,8 @@
-﻿<html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-    <title>Actualízame</title>
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html class="no-js ui-mobile-rendering" lang="es">
+<head>
+    <title>Actualizame</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <script type="text/javascript" src="http://www.google.com/jsapi"></script>
     <script type="text/javascript">
 
@@ -81,6 +82,7 @@ function carga_informacion(db,result,objeto)
      feed.load(function(result) {
         if (!result.error) {
 //		  alert(result.feed.entries.length);		 
+			alert("Entra a actualiza_informacion_ubicacion");
 			carga_informacion(db,result,document.getElementById("feed2"));						
         }
       });
@@ -94,6 +96,7 @@ function carga_informacion(db,result,objeto)
      feed.setNumEntries(1000000);
      feed.load(function(result) {
         if (!result.error) {
+			alert("Entra a actualiza_informacion_programa");
 			carga_informacion(db,result,document.getElementById("feed"));						
         }
       });
@@ -128,7 +131,7 @@ switch(s)
 function escribe_feed()
 {
 db2 = openDatabase("ejemplo3.db3", "1.0", "Ministerio de Justicia", 500000);
-
+alert("Entra a escribe_feed");
 db2.transaction( function(tx2) {
 
 			tx.executeSql("Delete from informacion_programa;");
