--- a/www/actualizame.html
+++ b/www/actualizame.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html class="no-js ui-mobile-rendering" lang="es">
 <head>
     <title>Actualizame</title>
@@ -176,6 +176,7 @@ inicializa_feed();
     </script>
   </head>
   <body>
+    <div> Version 1.0.0 </div>
     <div id="feed"></div>
     <div id="feed2"></div>
   </body>
