Prueba No. 4 Con librería de Google y activación de permisos en el archivo XML

--- a/www/actualizame.html
+++ b/www/actualizame.html
@@ -3,6 +3,7 @@
     <title>Actualizame</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="http://www.google.com/jsapi"></script>
     <script type="text/javascript">
 
 /*Definición Variables Globales*/
@@ -173,7 +174,7 @@ db.transaction( function(tx) {
     </script>
   </head>
   <body>
-    <div> Version 1.0.1 </div>
+    <div> Version 1.0.2 </div>
     <div id="feed"></div>
     <div id="feed2"></div>
   </body>
