--- a/www/sigueme.html
+++ b/www/sigueme.html
@@ -7,7 +7,8 @@
 	  <script src="js/jquery-1.9.1.min.js"></script>
 
 
-	  <script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
+	  <script src="phonegap.js"></script>
+	  <script src="childbrowser.js"></script>
       <link rel="stylesheet" href="css/jquery.mobile-1.3.1.min.css" />
       <script src="js/libs/require.js" data-main="js/mobile"></script>
 	  
