--- a/www/creditos.html
+++ b/www/creditos.html
@@ -4,7 +4,6 @@
 
       <meta name="viewport" content="width=device-width, initial-scale=1">
 	  <script src="js/jquery-1.9.1.min.js"></script>
-      <script type="text/javascript" charset="utf-8" src="js/cordova-2.9.0.js"></script>
 
       <link rel="stylesheet" href="css/jquery.mobile-1.3.1.min.css" />
       <script src="js/libs/require.js" data-main="js/mobile"></script>
@@ -20,11 +19,11 @@ var bg = jQuery("#bg");
 ratio = 1;
  
 if (screenWidth/screenHeight > ratio) {
-$(bg).height("77%");
+$(bg).height("100%");
 $(bg).width("100%");
 } else {
 $(bg).width("100%");
-$(bg).height("77%");
+$(bg).height("100%");
 }
  
 // Si a la imagen le sobra anchura, la centramos a mano
@@ -57,13 +56,10 @@ updateBackground();
 </script>		
     </head>
 <body>
-<center><div id="container" style="width: 100%; height: 50%; margin: auto auto"></div></center>
-<div data-role="header">
-		<h1>TodoBien - Creditos</h1>
-	</div><!-- /header -->
-<img src="images/creditos.png" alt="Fondo" id="bg" style="height: 50; width: 100%; left: 0px;">
+<center><div id="container" style="width: 100%; height: 100%; margin: auto auto">
+<img src="images/creditos.png" alt="Fondo" id="bg">
 <p><a href="index.html" data-direction="reverse" data-role="button" data-theme="b">Regresar</a></p>
-
+</div></center>
 		
     </body>
 </html>
